--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 <title>Fitness</title>
 <link href="./css/styles.css" rel="stylesheet" type="text/css">
 <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="bootstrap.bundle.js"></script>
-<script type="text/javascript" src="jquery-3.5.0.slim.min.js"></script>
+	
 </head>
 <!-- Start of Content -->
 <body>
@@ -79,5 +80,8 @@
 	<!-- End of footer --> 
 	
 	<!-- End of Content -->
+	<script type="text/javascript" src="bootstrap.bundle.js"></script>
+<script type="text/javascript" src="jquery-3.5.0.slim.min.js"></script>
+
 </body>
 </html>
