Updated Sign up page
Added meta tags and moved the script

--- a/Sign_Page.html
+++ b/Sign_Page.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	
 <title>Sign Flex Fitness</title>
 <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="./css/styles-copy.css" rel="stylesheet">
-<script src="../../../JS/popper.min.js"></script>
-<script type="text/javascript" src="bootstrap.bundle.js"></script>
-<script type="text/javascript" src="jquery-3.5.0.slim.min.js"></script>
+
 </head>
 	
 
@@ -95,6 +96,9 @@
 	-- End of Footer --
 	
 	-- End of Content --
+	<script src="../../../JS/popper.min.js"></script>
+<script type="text/javascript" src="bootstrap.bundle.js"></script>
+<script type="text/javascript" src="jquery-3.5.0.slim.min.js"></script>
 	
 </body>
 </html>
