--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+
 <title>Fitness</title>
 <link href="./css/styles.css" rel="stylesheet" type="text/css">
+<link href="./css/styles-copy.css" rel="stylesheet">
 <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	
 </head>
